# qa_portal

./: .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
MKT_HU_LOGIN/: pom.xml
POC_MKT_HU_LOGIN/MKT_HU_LOGIN/: .project
analytiqa/: settings.py  urls.py
analytiqa/helpers/: ErrorHandlers.py  custom_generics.py  renders.py
apps/account/: admin.py  managers.py  models.py  signals.py  tests.py  utils.py
apps/account/apis/: serializers.py  urls.py  views.py
apps/account/migrations/: 0001_initial.py  0002_alter_account_email.py
apps/core/: admin.py  models.py  tests.py  utils.py
apps/core/apis/: serializers.py  urls.py  views.py
apps/stb_tester/: tasks.py  views.py
apps/stbs/: admin.py  apps.py  models.py  signals.py  tests.py
apps/stbs/apis/: serializers.py  urls.py  views.py
apps/stbs/migrations/: 0001_initial.py
apps/testcase_app/: admin.py  apps.py  filters.py  models.py  pagination.py  permissions.py  signals.py  tests.py
apps/testcase_app/apis/: serializers.py  urls.py  views.py
apps/testcase_app/migrations/: 0001_initial.py  0002_alter_testcasestep_testcase.py
apps/testcases/: admin.py  filters.py  managers.py  models.py  pagination.py  signals.py  utlity.py
apps/testcases/apis/: serializers.py  urls.py  views.py
frontend/: index.html
qa_backend/: asgi.py  settings.py  urls.py  wsgi.py
qa_backend/helpers/: custom_generics.py  exceptions.py  renders.py
staticfiles/css/: main.800a1c5b.css  main.800a1c5b.css.map
staticfiles/js/: main.8f3bd89a.js
(+3 files in other folders)
